section 2 and section 3

--- a/home.html
+++ b/home.html
@@ -29,12 +29,97 @@
   </header>
 
 
-<div id="header-banner">Ləman</div>
 
-<section id="section1">Şəhriyar</section>
 
-<section id="section2">Gülarə</section>
 
+
+<!-- section 1 -->
+
+  <section id="section1">
+
+    <div class="center">
+
+      <div class="center-first">
+
+        <div class="image"></div>
+
+        <button>Branding</button>
+
+        <h2>KeyBoard</h2>
+
+      </div>
+
+    </div>
+
+  </section>
+
+
+<!-- section 2 -->
+
+
+<section id="section2">
+
+  <div class="top">
+
+    <div class="top-left-image">
+
+      <div class="image"></div>
+  
+      <button>Design</button>
+  
+      <h2>SOFA</h2>
+
+    </div>
+    <div class="top-right-image">
+
+      <div class="image"></div>
+  
+      <button>Illustration</button>
+  
+      <h2>Work Media</h2>
+
+    </div>
+
+  </div>
+
+
+
+    <div class="bottom">
+
+    <div class="bottom-left-image">
+
+      <div class="image"></div>
+  
+      <button>Motion</button>
+  
+      <h2>DDDone</h2>
+
+    </div>
+    <div class="bottom-right-image">
+
+      <div class="image"></div>
+  
+      <button>Brand</button>
+  
+      <h2>HandP</h2>
+
+    </div>
+
+  </div>
+
+
+  <div class="btns">
+    <button>1</button>
+    <button>2</button>
+    <button>3</button>
+    <button>4</button>
+    <button>5</button>
+  </div>
+
+</section>
+
+
+<!-- footer -->
 
   <footer id="footer">
     <div class="container">
