--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./assets/css/main.css" />
+  <link rel="stylesheet" href="./css/main.css" />
   <title>Document</title>
 </head>
 
@@ -26,6 +26,39 @@
         <button class="contact-btn">Contact</button>
       </div>
     </div>
+    <div id="header-banner">
+      <div class="container">
+        <div class="header-banner">
+          <h1>Portfolio</h1>
+          <div class="textp"><p>Agency provides a full service range including technical skills, design, business understanding.</p></div>
+        </div>
+      </div>
+    </div>
+    
+    <section id="section1">
+      <div class="container">
+        <div class="section1">
+          <ul>
+            <li><a href="#">Show All <sup>14</sup></a></li>
+            <li><a href="#">Design <sup>6</sup></a></li>
+            <li><a href="#">Branding <sup>4</sup></a></li>
+            <li><a href="#">Illustration <sup>3</sup></a></li>
+            <li><a href="#">Motion <sup>1</sup></a></li>
+          </ul>
+        </div>
+        <div class="list">
+          <div>
+            <select name="" id=""><option selected disabled>Show All</option>
+            <option value="">Design</option>
+            <option value="">Branding</option>
+            <option value="">Illustration</option>
+            <option value="">Motion</option>
+          
+          </select>
+          </div>
+        </div>
+      </div>
+    </section>
   </header>
 
 
