--- a/home.html
+++ b/home.html
@@ -151,7 +151,28 @@
 
 </section>
 
-
+<section id="section2">
+  <div class="container">
+    <div class="section2">
+      <div class="umumi">
+        <div class="sol">
+          <h2>Help To Build <br> Your Dream <br> Project</h2>
+          <p>
+            A digital agency is a business you hire to outsource your <br>
+            digital marketing efforts, instead of handling in-house.
+          </p>
+          <button>Contact Now</button>
+        </div>
+        <div class="sag">
+          <div class="img">
+            <img src="./assets/images/pic.png" alt="">
+          </div>
+         
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 <!-- footer -->
 
   <footer id="footer">
