--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./css/main.css" />
+  <link rel="stylesheet" href="./assets/css/main.css" />
   <title>Document</title>
 </head>
 
@@ -24,8 +24,13 @@
           </ul>
         </nav>
         <button class="contact-btn">Contact</button>
+        <img src="./assets/images/menu.svg" alt="" class="menu" />
       </div>
     </div>
+
+<!-- header banner Leman -->
+
+
     <div id="header-banner">
       <div class="container">
         <div class="header-banner">
@@ -64,7 +69,7 @@
 
 
 
-
+<!-- Sehriyar -->
 
 <!-- section 1 -->
 
@@ -151,6 +156,10 @@
 
 </section>
 
+
+
+<!-- Gulare -->
+
 <section id="section2">
   <div class="container">
     <div class="section2">
@@ -165,7 +174,7 @@
         </div>
         <div class="sag">
           <div class="img">
-            <img src="./assets/images/pic.png" alt="">
+            <img src="./assets/images/footer-top-image.svg" alt="">
           </div>
          
         </div>
@@ -173,6 +182,8 @@
     </div>
   </div>
 </section>
+
+
 <!-- footer -->
 
   <footer id="footer">
